--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "browser": {
+  "fs": false,
+  "path": false,
+  "os": false
+}
 }
